# nextage_recognition

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: logitech_quickcam_pro_c905_1600x1200.yaml  match_template.rviz
launch/: detect_object_on_plane.launch  match_template_with_camera.launch  match_template_with_file.launch  quickcam.launch
script/: gaze_plane_projector.py
