<?xml version="1.0"?>
<package>
  <name>nextage_recognition</name>
  <version>0.0.0</version>
  <description>The nextage_recognition package</description>
  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/nextage_recognition</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>opencv_apps</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
